--- a/.env.development
+++ b/.env.development
@@ -2,9 +2,9 @@
 NODE_ENV = 'development'
 VITE_WEB_TITLE = 'KOI-ADMIN'
 VITE_LOGIN_TITLE = 'KOI-ADMIN 管理平台'
-VITE_WEB_BASE_API = '/dev-api'
+# TODO:api接口配置
 # 本地Mock地址
-VITE_SERVER = 'http://localhost:8088'
+VITE_SERVER = 'http://125.223.112.154:52002/'
 # 路由模式[哈希模式 AND WEB模式 [hash | history, 这两个模式是固定死的，不能乱改值]
 VITE_ROUTER_MODE = history
 # 是否使用全部去除console和debugger
