--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "commitlint": "commitlint --config commitlint.config.cjs -e -V"
   },
   "dependencies": {
+    "@devui-design/icons": "^1.4.0",
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.11.0",
     "animate.css": "^4.1.1",
     "axios": "^1.7.3",
     "crypto-js": "^4.2.0",
     "default-passive-events": "^2.0.0",
+    "devui-theme": "^0.0.7",
     "driver.js": "^1.3.1",
     "echarts": "^5.5.1",
     "element-plus": "^2.7.8",
@@ -41,7 +43,10 @@
     "pinia": "^2.2.0",
     "pinia-plugin-persistedstate": "^3.2.1",
     "sortablejs": "^1.15.2",
+    "v-viewer": "^3.0.11",
+    "viewerjs": "^1.11.7",
     "vue": "^3.4.35",
+    "vue-devui": "^1.6.29",
     "vue-pdf-embed": "^2.1.1",
     "vue-router": "^4.4.2",
     "vue3-count-to": "^1.1.2",
